# antsol

./: README.md  filelist.txt
antsol-cli/: .gitignore  Cargo.toml  README.md
antsol-cli/scripts/: setup.sh
antsol-cli/src/: config.rs  ipfs.rs  main.rs  solana_client.rs  types.rs  utils.rs
antsol-cli/src/commands/: info.rs  init.rs  install.rs  mod.rs  publish.rs  search.rs  setup.rs  update.rs  wallet.rs
antsol-indexer-v2/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  render.yaml
antsol-indexer-v2/migrations/: 001_init.sql
antsol-indexer-v2/src/: config.rs  lib.rs  main.rs
antsol-indexer-v2/src/api/: handlers.rs  routes.rs
antsol-indexer-v2/src/db/: mod.rs  models.rs  queries.rs
antsol-indexer-v2/src/indexer/: listener.rs  mod.rs  parser.rs
antsol-indexer-v2/tests/: parser_tests.rs
antsol-registry/: Anchor.toml  package-lock.json  package.json
antsol-registry/programs/antsol-registry/: Cargo.toml
antsol-registry/programs/antsol-registry/src/: errors.rs  lib.rs
antsol-registry/programs/antsol-registry/src/instructions/: mod.rs  publish_package.rs  transfer_authority.rs  update_package.rs
antsol-registry/programs/antsol-registry/src/state/: mod.rs
antsol-registry/tests/: antsol-registry.ts
