[package]
name = "antsol"
version = "1.0.0"
edition = "2021"
authors = ["AntSol Team"]
description = "Decentralized Package Registry on Solana Blockchain with IPFS Storage"
license = "MIT"

[[bin]]
name = "antsol"
path = "src/main.rs"

[dependencies]
# CLI & UI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
borsh = "0.10"

# Solana
solana-sdk = "1.17"
solana-client = "1.17"

# IPFS & HTTP
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.35", features = ["full"] }

# Compression & Archive
flate2 = "1.0"
tar = "0.4"

# Crypto
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4"] }

# File system
walkdir = "2.4"
dirs = "5.0"

# Utils
regex = "1.10"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
