[package]
name = "antsol-indexer-v2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "antsol-indexer-v2"
path = "src/main.rs"

[lib]
name = "antsol_indexer_v2"
path = "src/lib.rs"

[dependencies]
# Web framework - Latest Axum (faster than Actix, cleaner API)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-full"] }

# Database - tokio-postgres (direct, no SQLx conflicts)
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.14"

# Solana - Latest 2.0 (modern, no old zeroize issues)
solana-client = "2.0"
solana-sdk = "2.0"
solana-transaction-status = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
bs58 = "0.5"
native-tls = "0.2"
postgres-native-tls = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
