[package]
name = "antsol-registry"
version = "0.1.0"
description = "Decentralized package registry for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "antsol_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.30.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(target_os, values("solana"))',
	'cfg(feature, values("anchor-debug", "idl-build", "no-entrypoint"))'
] }
